<resources>
    <string name="app_name">mita</string>
    <string name="login_text">Войти через Google</string>
    <string name="choose_next_step_text">Выберите дальнейшее действие</string>
    <string name="find_apartment_text">Ищем квартиру</string>
    <string name="rent_apartment_text">Сдаем квартиру</string>
    <string name="external_accounts_text">Внешние аккаунты</string>
    <string name="edit_button_text">Изменить</string>
    <string name="personal_data_text">Личные данные</string>
    <string name="add_button_text">Добавить</string>
    <string name="edit_photo_text">Изменить фото</string>
    <string name="add_text">Добавить</string>
    <string name="telegram_text">Telegram</string>
    <string name="age_text">Возраст</string>
    <string name="phone_number_text">Номер телефона</string>
    <string name="surname_text">Фамилия</string>
    <string name="name_text">Имя</string>
    <string name="add_apartment_text">Добавить квартиру</string>
    <string name="choose_metro_text"><u>Укажите метро</u></string>
    <string name="choose_rooms_number_text">Укажите количество комнат</string>
    <string name="squared_metres_text">кв.м</string>
    <string name="add_photos_text">Добавить фотографии</string>
    <string name="enter_square_text">Укажите площадь</string>
    <string name="enter_cost_text">Укажите стоимость</string>
    <string name="offer_an_apartment">Предложить квартиру</string>
    <string name="currency_text">руб</string>
    <string name="studio_text">Студия</string>
    <string name="one_room_text">1 комната</string>
    <string name="two_room_text">2 комнаты</string>
    <string name="three_room_text">3 комнаты</string>
    <string name="four_room_text">4 комнаты</string>
    <string name="five_plus_room_text">5+ комнат</string>
    <string name="photos_label">Фотографии:</string>
    <string name="price_per_month">Цена за месяц</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="square">Площадь</string>
    <string name="features">Особенности</string>
    <string name="about_me">О себе</string>
    <string name="save">Сохранить</string>
    <string name="publish">Опубликовать</string>
    <string name="continue_btn">Продолжить</string>
    <string name="age">Возраст</string>
    <string name="change_photo">Изменить фото</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone">Телефон</string>
    <string name="money_default_value">Не указано</string>
    <string name="metres_default_value">Не указано</string>
    <string name="toast_fill_all_information_about_apartment">Укажите всю информацию о квартире</string>
    <string name="acceptably">Допустимо</string>
    <string name="gender">Пол</string>
    <string name="filters">Фильтры</string>
    <string name="menu_title_list_of_people_text">Объявления</string>
    <string name="menu_title_list_of_apartments">Список квартир</string>
    <string name="menu_title_settings">Настройки</string>
    <string name="toast_fill_all_information_about_user">Укажите всю информацию о себе</string>
    <string name="toast_changes_are_saved">Изменения сохранены</string>
    <string name="toast_fill_all_advert_info">Укажие всю информацию об объявлении</string>
    <string name="toast_advert_unavailable">Объявление больше не доступно</string>
    <string name="toast_apartment_already_proposed">Вы уже предложили квартиру этому человеку</string>
    <string name="toast_no_apartments_yet">У вас нет доступных квартир</string>
    <string-array name="genders">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>

    <string name="money">от %1$d до %2$d</string>
    <string name="metres">от %1$d до %2$d</string>
    <string name="show_phone">Показать телефон</string>
    <string name="edit_apartment_text">Изменить квартиру</string>
    <string name="dialog_fragment_title_add_apartment">Добавление квартиры</string>
    <string name="dialog_fragment_message_add_apartment">У вас нет квартиры, хотите ее добавить?</string>
    <string name="dialog_fragment_title_add_advert">Добавление объявления</string>
    <string name="dialog_fragment_message_add_advert">У вас нет объявления, хотите его добавить?</string>
    <string name="toast_there_are_no_apartment_to_edit">У вас нет квартиры для редактирования</string>
    <string name="dialog_fragment_add_button_text">Добавить</string>
    <string name="dialog_fragment_cancel_button_text">Отмена</string>
    <string name="error_dao">Что-то пошло не так, приходите по-позже</string>
    <string name="toast_there_are_no_advert_to_edit">У вас нет объявления для редактирования</string>
    <string name="toasts_user_changed_advert_info">Вы изменили информацию объявления</string>
    <string name="toast_user_changed_apartment_info">Вы изменили информацию о квартире</string>
    <string name="my_apartment_text">Моя квартира</string>
    <string name="my_announcement">Мое объявление</string>
    <string name="text_you_offer_apartment_to">Вы предложили квартиру человеку с именем</string>
    <string name="age_advert_let">лет</string>
    <string name="age_advert_god">год</string>
    <string name="age_advert_goda">года</string>
    <string name="reject">Отклонить</string>
    <string name="metres_string">Метры</string>


    <string-array name="genders_filter">
        <item>Любой</item>
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>


</resources>