<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/component_person_header" />

    <Button
        android:id="@+id/fragment_filling_profile_info_edit_btn"
        android:layout_width="154dp"
        android:layout_height="44dp"
        android:background="@drawable/btn_border"
        android:fontFamily="sans-serif-light"
        android:text="@string/change_photo"
        android:textAllCaps="false"
        android:textColor="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/fragment_filling_profile_info_continue_btn"
        android:layout_width="225dp"
        android:layout_height="46dp"
        android:background="@color/main"
        android:fontFamily="sans-serif-light"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <EditText
        android:id="@+id/fragment_filling_profile_info_name_et"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:autofillHints="name"
        android:background="@drawable/et_border"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/fragment_filling_profile_info_surname_et"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:autofillHints="surname"
        android:background="@drawable/et_border"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <EditText
        android:id="@+id/fragment_filling_profile_info_age_et"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:autofillHints="age"
        android:background="@drawable/et_border"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <EditText
        android:id="@+id/fragment_filling_profile_info_phone_et"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:autofillHints="phone"
        android:background="@drawable/et_border"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462" />

    <Spinner
        android:id="@+id/fragment_filling_profile_info_gender_sp"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:background="@drawable/et_border"
        android:ems="10"
        android:entries="@array/genders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

</androidx.constraintlayout.widget.ConstraintLayout>