<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_next_step_text"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        style="@style/App.Headers.Style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_self_definition__button_find_apartment"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/find_apartment_text"
        style="@style/App.Choose.Yourself.Button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_self_definition__button_rent_apartment"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <Button
        android:id="@+id/fragment_self_definition__button_rent_apartment"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:text="@string/rent_apartment_text"
        style="@style/App.Choose.Yourself.Button"
        app:layout_constraintTop_toBottomOf="@id/fragment_self_definition__button_find_apartment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>